@@ -51,6 +51,20 @@ name|cayenne
 operator|.
 name|query
 operator|.
+name|ObjectSelect
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|query
+operator|.
 name|SelectQuery
 import|;
 end_import
@@ -154,6 +168,20 @@ operator|.
 name|server
 operator|.
 name|UseServerRuntime
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|validation
+operator|.
+name|ValidationException
 import|;
 end_import
 
@@ -3760,6 +3788,14 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+argument_list|(
+name|expected
+operator|=
+name|ValidationException
+operator|.
+name|class
+argument_list|)
+comment|// other2 is missing now
 specifier|public
 name|void
 name|testInsertWithAttributeAndRelationship
@@ -3812,7 +3848,7 @@ argument_list|)
 expr_stmt|;
 name|impl
 operator|.
-name|setOther
+name|setOther1
 argument_list|(
 name|other
 argument_list|)
@@ -3821,6 +3857,141 @@ name|context
 operator|.
 name|commitChanges
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testInsertWithMultipleAttributeAndMultipleRelationship
+parameter_list|()
+block|{
+name|IvOther
+name|other1
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|IvOther
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|other1
+operator|.
+name|setName
+argument_list|(
+literal|"other1"
+argument_list|)
+expr_stmt|;
+name|IvOther
+name|other2
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|IvOther
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|other2
+operator|.
+name|setName
+argument_list|(
+literal|"other2"
+argument_list|)
+expr_stmt|;
+name|IvImpl
+name|impl
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|IvImpl
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|impl
+operator|.
+name|setName
+argument_list|(
+literal|"Impl 1"
+argument_list|)
+expr_stmt|;
+name|impl
+operator|.
+name|setAttr1
+argument_list|(
+literal|"attr1"
+argument_list|)
+expr_stmt|;
+name|impl
+operator|.
+name|setAttr2
+argument_list|(
+literal|"attr2"
+argument_list|)
+expr_stmt|;
+name|impl
+operator|.
+name|setOther1
+argument_list|(
+name|other1
+argument_list|)
+expr_stmt|;
+name|impl
+operator|.
+name|setOther2
+argument_list|(
+name|other2
+argument_list|)
+expr_stmt|;
+name|context
+operator|.
+name|commitChanges
+argument_list|()
+expr_stmt|;
+name|IvImpl
+name|impl2
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|IvImpl
+operator|.
+name|class
+argument_list|)
+operator|.
+name|selectFirst
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|other1
+argument_list|,
+name|impl2
+operator|.
+name|getOther1
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|other2
+argument_list|,
+name|impl2
+operator|.
+name|getOther2
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
