@@ -114,15 +114,55 @@ specifier|static
 specifier|final
 name|Property
 argument_list|<
-name|IvOther
+name|String
 argument_list|>
-name|OTHER
+name|ATTR2
 init|=
 name|Property
 operator|.
 name|create
 argument_list|(
-literal|"other"
+literal|"attr2"
+argument_list|,
+name|String
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|Property
+argument_list|<
+name|IvOther
+argument_list|>
+name|OTHER1
+init|=
+name|Property
+operator|.
+name|create
+argument_list|(
+literal|"other1"
+argument_list|,
+name|IvOther
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|Property
+argument_list|<
+name|IvOther
+argument_list|>
+name|OTHER2
+init|=
+name|Property
+operator|.
+name|create
+argument_list|(
+literal|"other2"
 argument_list|,
 name|IvOther
 operator|.
@@ -162,17 +202,48 @@ return|;
 block|}
 specifier|public
 name|void
-name|setOther
+name|setAttr2
+parameter_list|(
+name|String
+name|attr2
+parameter_list|)
+block|{
+name|writeProperty
+argument_list|(
+literal|"attr2"
+argument_list|,
+name|attr2
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getAttr2
+parameter_list|()
+block|{
+return|return
+operator|(
+name|String
+operator|)
+name|readProperty
+argument_list|(
+literal|"attr2"
+argument_list|)
+return|;
+block|}
+specifier|public
+name|void
+name|setOther1
 parameter_list|(
 name|IvOther
-name|other
+name|other1
 parameter_list|)
 block|{
 name|setToOneTarget
 argument_list|(
-literal|"other"
+literal|"other1"
 argument_list|,
-name|other
+name|other1
 argument_list|,
 literal|true
 argument_list|)
@@ -180,7 +251,7 @@ expr_stmt|;
 block|}
 specifier|public
 name|IvOther
-name|getOther
+name|getOther1
 parameter_list|()
 block|{
 return|return
@@ -189,7 +260,40 @@ name|IvOther
 operator|)
 name|readProperty
 argument_list|(
-literal|"other"
+literal|"other1"
+argument_list|)
+return|;
+block|}
+specifier|public
+name|void
+name|setOther2
+parameter_list|(
+name|IvOther
+name|other2
+parameter_list|)
+block|{
+name|setToOneTarget
+argument_list|(
+literal|"other2"
+argument_list|,
+name|other2
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|IvOther
+name|getOther2
+parameter_list|()
+block|{
+return|return
+operator|(
+name|IvOther
+operator|)
+name|readProperty
+argument_list|(
+literal|"other2"
 argument_list|)
 return|;
 block|}
